# t3-conv

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  t3conv.ini
docs/: t3conv-developer-guide.md  tbatsave-direct-worker-protocol.md
runtime/tgstart_host/: tangent_mnl_bridge.lsp  tbatsave_experimental_trigger.lsp
src/common/: types.h  utils.cpp  utils.h
src/t3conv/: CMakeLists.txt  args_parser.cpp  args_parser.h  batch_runner.cpp  batch_runner.h  config_loader.cpp  config_loader.h  main.cpp  process_mgr.cpp  process_mgr.h  tbatsave_reverse_contract.h  tbatsave_runtime_patch.cpp  tbatsave_runtime_patch.h
tests/: __init__.py  test_cpp_scaffold_contracts.py
tools/: package.ps1  restore-autocad-settings.cmd
